= Changelog

This changelog contains major and/or breaking changes to Kakoune between
released versions.

== Kakoune v2020.01.16

* Expose history tree through `$kak_history` and
  `$kak_uncommitted_modifications`

* `InsertCompletionHide` parameter is the list of inserted
  ranges

== Kakoune 2019.12.10

* Arrow keys and `<home>`, `<end>` are not normal mode commands
  anymore but default key mappings.
  
* `ModeChange` hook parameter now takes `push:` or `pop:` prefix,
  `InsertBegin`, `InsertEnd`, `NormalBegin` and `NormalEnd`
  were removed.

* `-verbatim` switch in `evaluate-commands` for perfect command
  forwarding to another context.

* `WrapMarker` face used by `wrap -marker` highlighter

* `info` supports markup with the `-markup` switch

* `rename-buffer` gained `-file` and `-scratch` switches
  to support converting buffer types.  

== Kakoune 2019.07.01

* Re-organized bundled script files directory hierarchy.

* Introduced helpers to write/read from file in scripts with
  `%file{...}` expansion and `echo -to-file <filename>`.

* Added `ClientCreate` and `ClientClose` hooks

* `edit -scratch` with no buffer name will create a new
  scratch buffer with a unique autogenerated name.

* `info -placement` is now `info -style` and supports
  `menu` and `modal` additional styles.

* `completions` option type `docstring` are now arbitrary
  kakoune commands that are run on item select.

* `InsertCompletionSelect` hook has been removed as
  `completions` commands now provides a similar feature.

* Introduced a module system using the `provide-module` and
  `require-module` commands that allows for lazily loading language
  support files with dependency resolution.

* Added a new hook `ModuleLoaded` which is run after a module is
  loaded, allowing for module specific configuration.

* Shell quoting of lists is not automatic anymore, `$kak_quoted_...`
  makes it opt-in, and works for all option types.

* Lower case function key syntax is not accepted anymore,